<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">
        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/pb_homeBadge"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/iv_homeBadge"
            android:layout_weight="1"
            android:visibility="gone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="VS"
            android:textSize="13pt"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
        <ProgressBar
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:id="@+id/pb_awayBadge"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:id="@+id/iv_awayBadge"
            android:layout_weight="1"
            android:visibility="gone" />
    </LinearLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb_detail"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/detail_field"
        android:visibility="gone">

    <LinearLayout
        style="@style/LinearLayoutStyle">
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tvName1"
            android:id="@+id/teamName"
            />
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tvName2"
            android:id="@+id/awayName"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/tv_schedule"
        android:text="@string/schedule"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:background="@color/taupe"
        android:textColor="@color/white"
        ></TextView>
    <LinearLayout
        style="@style/LinearLayoutStyle">
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tvScore1"
            android:id="@+id/home_score"
            />

        <TextView
            style="@style/TextViewStyle"
            android:text="@string/score"
            />
        <TextView
            style="@style/TextViewStyle"
            android:text="@string/tvScore2"
            android:id="@+id/away_score"
            />
    </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tvFormation1"
                android:id="@+id/home_formation"
                />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/formation"
                />
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tvFormation2"
                android:id="@+id/away_formation"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tvGoal1"
                android:id="@+id/home_goals"
                />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/goals"
                />
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tvScore2"
                android:id="@+id/away_goals"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tv_red_card_1"
                android:id="@+id/home_red_card"
                />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/red_cards"
                />
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tv_red_card_2"
                android:id="@+id/away_red_card"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutStyle">
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tv_yellow_card_1"
                android:id="@+id/home_yellow_card"
                />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/yellow_card"
                />
            <TextView
                style="@style/TextViewStyle"
                android:text="@string/tv_yellow_card_2"
                android:id="@+id/away_yellow_card"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>